--- a/Back-end/vercel.json
+++ b/Back-end/vercel.json
@@ -1,14 +1,12 @@
 {
-    "builds": [{
-        "src": "config/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-    }],
-    "routes": [
+    "builds": [
         {
-            "src": "/static/(.*)",
-            "dest": "/static/$1"
-        },
+            "src": "config/wsgi.py",
+            "use": "@vercel/python",
+            "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+        }
+    ],
+    "routes": [
         {
             "src": "/(.*)",
             "dest": "config/wsgi.py"
